# scara

./: README.md
bagfiles/: inverse_kinematic_openloop.bag  subset.bag
config/: scara_params.yaml
models/: params_macro.xacro  scara_robot.xacro
scara_robot/: CMakeLists.txt  package.xml
scara_robot/config/: scara_actuation.yaml  scara_params.yaml
scara_robot/control/: controller.cpp
scara_robot/launch/: scara.launch
scara_robot/models/: params_macro.xacro  scara_robot.xacro
scara_robot/src/: path_follow.cpp  scara_control.cpp
